# pytorch-adaptive-computation-time

./: .gitignore  README.md  pyproject.toml  readthedocs.yml
docs/: conf.py  index.rst  models.rst  tasks.rst
pytorch_adaptive_computation_time/: models.py
pytorch_adaptive_computation_time/tasks/: addition.py  parity.py
