[tool.poetry]
name = "pytorch-adaptive-computation-time"
version = "0.1.0"
description = "A clean implementation of adaptive computation time RNNs [Graves 2016] in PyTorch."
license = "Apache-2.0"
authors = ["maxwells-daemons <aidanswope@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/maxwells-daemons/pytorch-adaptive-computation-time"
repository = "https://github.com/maxwells-daemons/pytorch-adaptive-computation-time"
documentation = "TODO"
keywords = ["pytorch", "adaptive-computation-time", "rnn", "machine-learning", "neural-network"]
classifiers = [
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.1"
pytorch-lightning = "0.8.5"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
sphinx = { version = "^3.2.0", optional = true }
sphinx-argparse = { version = "^0.2.5", optional = true }
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
python-language-server = {version = "^0.34.1", allow-prereleases = true}
flake8 = {version = "^3.8.3", allow-prereleases = true}
mypy = {version = "^0.782", allow-prereleases = true}
black = {version = "^19.10b0", allow-prereleases = true}
isort = {version = "^5.2.2", allow-prereleases = true}
neovim = {version = "^0.3.1", allow-prereleases = true}
pynvim = {version = "^0.4.1", allow-prereleases = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx-argparse"]

[tool.poetry.scripts]
train = "pytorch_adaptive_computation_time.training:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
