[tool.poetry]
name = "pytorch-adaptive-computation-time"
version = "0.1.3"
description = "Implements adaptive computation time RNNs in PyTorch, with the same interface as builtin RNNs."
license = "Apache-2.0"
authors = ["maxwells-daemons <aidanswope@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/maxwells-daemons/pytorch-adaptive-computation-time"
repository = "https://github.com/maxwells-daemons/pytorch-adaptive-computation-time"
documentation = "https://pytorch-adaptive-computation-time.readthedocs.io/en/latest/"
keywords = ["pytorch", "adaptive-computation-time", "rnn", "machine-learning", "neural-network"]
classifiers = [
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.10"
pytorch-lightning = "0.8.5"
sphinx = { version = "^3.2.0", optional = true }
sphinx-argparse = { version = "^0.2.5", optional = true }
torch = "^1.5.0"

[tool.poetry.dev-dependencies]
python-language-server = {version = "^0.34.1", allow-prereleases = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx-argparse"]

[tool.poetry.scripts]
train = "pytorch_adaptive_computation_time.training:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
